# yomiyougu

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js  vitest.config.ts
.github/workflows/: publish-android.yml  publish-desktop.yml  tests.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-12-12-184506-0000_create_collections/: down.sql  up.sql
src-tauri/migrations/2025-12-12-184523-0000_create_books/: down.sql  up.sql
src-tauri/migrations/2025-12-12-184523-0001_create_bookmarks/: down.sql  up.sql
src-tauri/migrations/2025-12-12-184523-0002_create_book_settings/: down.sql  up.sql
src-tauri/migrations/2025-12-18-000000_book_collections_junction/: down.sql  up.sql
src-tauri/migrations/2025-12-28-000000_add_sync_columns/: down.sql  up.sql
src-tauri/migrations/2025-12-28-000001_remove_reader_background/: down.sql  up.sql
src-tauri/migrations/2026-01-03-000000_fix_current_page_default/: down.sql  up.sql
src-tauri/src/: error.rs  lib.rs  main.rs  protocol.rs  schema.rs
src-tauri/src/auth/: mod.rs  storage.rs  types.rs
src-tauri/src/commands/: auth.rs  device.rs  library.rs  mod.rs  settings.rs  sync.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  operations.rs  tests.rs
src-tauri/src/settings/: mod.rs  schema.rs  storage.rs  types.rs
src-tauri/src/sync/: drive.rs  merge.rs  mod.rs  types.rs
src/components/: DesktopNavigation.svelte  MobileNavigation.svelte  SetupWizard.svelte  SplashScreen.svelte
src/components/settings/: RadioDropdown.svelte  SettingCategory.svelte  SettingRow.svelte  SettingWidget.svelte  SyncSettingsCategory.svelte  index.ts
src/components/skeletons/: DashboardSkeleton.svelte  LibrarySkeleton.svelte  ReaderSkeleton.svelte  SettingsSkeleton.svelte  index.ts
src/lib/: index.ts
src/lib/services/: auth.ts  library.ts  settings.ts  sync.ts
src/lib/types/: auth.ts  library.ts  settings.ts
src/lib/utils/: platform.ts  search.ts  string.ts  theme.test.ts  theme.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/reader/: +layout.svelte
src/routes/reader/[id]/: +page.svelte
src/routes/settings/: +page.svelte
static/: fonts.css
