cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "yomiyougu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yomiyougu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
diesel = { version = "2.3.4", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
diesel_migrations = "2.3.1"
zip = "2.2"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"

# Bundle SQLite for Android/iOS (no system library available)
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
tauri-plugin-fs = "2"
urlencoding = "2.1.3"

# !! RAR support (desktop only - unrar crate doesn't compile for Android NDK) !!
[target.'cfg(not(target_os = "android"))'.dependencies]
unrar = "0.5"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.

# Optimize all dependencies even in dev mode for faster runtime
[profile.dev.package."*"]
opt-level = 2
